[ Bug fix ] : dark theme fixes (#5164)
* Close button for filter is not visible in dark mode.

* fixed : Hovering on dark mode selector is showing cursor instead of mouse pointer

* bug fixed

* bug fixes : dark theme

* fix : dark theme issue in search box and add page field in Pages

* bug fixed : serachbox in pages remains in dark theme only

* fixed properties and style tab bg in dark theme for the widget inspector

--- a/frontend/src/_styles/onboarding.scss
+++ b/frontend/src/_styles/onboarding.scss
@@ -1154,7 +1154,7 @@
 
     .tj-text-input,
     .onboard-input {
-        color: #fff;
+        color: #fff ;
         border-color: #787F85;
 
         ::placeholder {
@@ -1162,7 +1162,7 @@
         }
 
         p {
-            color: #697177;
+            color: white !important;
         }
 
         &:hover {
@@ -1399,6 +1399,14 @@
 
 .active-onboarding-tab {
     color: #111827 !important;
+}
+.theme-dark{
+    .active-onboarding-tab{
+        color: $color-dark-slate-12 !important;
+        img{
+            filter: brightness(0) invert(1);
+        }
+    }
 }
 
 .navigation-wrap {
